--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             </div>
 
             <div>
-                <form action="https://formsubmit.co/el/liheco" method="POST" class="hero-form container" id="heroForm">
+                <form action="https://formsubmit.co/28481391347b8dfe4421014691f1a276" method="POST" class="hero-form container" id="heroForm" target="_blank">
                     <div id="errorMsg" class="error-message"></div>
-                    <input type="email" name="email" placeholder="you@company.com" id="formEmail">
+                    <input type="text" name="email" placeholder="you@company.com" id="formEmail">
                     <button type="submit" class="notify" target="_blank">Notify me</button>
                 </form>
             </div>
@@ -232,33 +232,40 @@
                     <div class="accordion-item">
                         <div class="accordion-header">
                             <h3>What makes Aeris different?</h3>
-                            <i class='bx  bx-plus'  ></i>
+                            <span class="accordion-icon"><i class='bx  bx-plus'></i></span>
                         </div>
-                        <p class="content-blur">We embed senior product designers directly into your tools with a subscription model that scales.</p>
+                        <div class="accordion-content">
+                            <p class="content-blur">We embed senior product designers directly into your tools with a subscription model that scales.</p>
+                        </div>
                     </div>
 
                      <div class="accordion-item">
                         <div class="accordion-header">
                             <h3>How quickly can we start?</h3>
-                            <i class='bx  bx-plus'  ></i> 
+                                <span class="accordion-icon"><i class='bx  bx-plus'></i></span>
+
                         </div>
-                        <p class="content-blur">Within a few business days after onboarding your first sprint.</p>
+                        <div class="accordion-content"><p class="content-blur">Within a few business days after onboarding your first sprint.</p></div>
                     </div>
 
                      <div class="accordion-item">
                         <div class="accordion-header">
                             <h3>Do you handle UX and research too?</h3>
-                            <i class='bx  bx-plus'  ></i>
+                                <span class="accordion-icon"><i class='bx  bx-plus'></i></span>
                         </div>
-                        <p class="content-blur">Yes—user flows, wireframes, prototypes, and complete design systems.</p>
+                        <div class="accordion-content">
+                            <p class="content-blur">Yes—user flows, wireframes, prototypes, and complete design systems.</p>
+                        </div>
                     </div>
 
                      <div class="accordion-item">
                        <div class="accordion-header">
                          <h3>Is there a long-term contract?</h3>
-                            <i class='bx  bx-plus'  ></i> 
+                                <span class="accordion-icon"><i class='bx  bx-plus'></i></span>
                        </div>
-                        <p class="content-blur">No. Flexible month-to-month subscription.</p>
+                        <div class="accordion-content">
+                            <p class="content-blur">No. Flexible month-to-month subscription.</p>
+                        </div>
                     </div>
                 </div>
                </section>
@@ -270,9 +277,9 @@
                         <p class="content-blur">Get access to senior design power without the hiring maze.</p>
 
                         <div class="cta-form">
-                            <form action="https://formsubmit.co/ugohemmy@gmail.com" method="POST" id="ctaForm">
+                            <form action="https://formsubmit.co/28481391347b8dfe4421014691f1a276" method="POST" id="ctaForm" target="_blank">
                                 <div id="ctaErrorMsg" class="error-cta"></div>
-                                <input type="email" name="email" placeholder="you@company.com" id="ctaEmail" class="email-input">
+                                <input type="text" name="email" placeholder="you@company.com" id="ctaEmail" class="email-input">
                                 <button type="submit" class="form-button" target="blank">Get early access</button>
                                 <div class="mobile-check">
                                     <input type="checkbox" required><span class="content-blur checkbox">By signing up, you agree to our [Terms] and [Privacy]. </span>
