--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="image">
         <a href="#">
-            <img src="/Assets/Practice_Logo.png" alt="Logo" class="mob-image">
+            <img src="/Assets/Practice_Logo.png" alt="Logo">
         </a>
         <nav class="nav-bar trans">
             <div class="nav-link1">
